sass compile compact

--- a/Jungle-Academy/portfolio1-smart/css/boy-and-girl-style.css
+++ b/Jungle-Academy/portfolio1-smart/css/boy-and-girl-style.css
@@ -1,13 +1,6 @@
-.hero {
-  background: #f6f0dc;
-}
+.hero { background: #f6f0dc; }
 
-.hero img {
-  display: block;
-  margin: 0px auto;
-}
+.hero img { display: block; margin: 0px auto; }
 
-.test {
-  height: 150px;
-}
+.test { height: 150px; }
 /*# sourceMappingURL=boy-and-girl-style.css.map */
