--- a/home/1_LLOYD/css/index.css
+++ b/home/1_LLOYD/css/index.css
@@ -1,275 +1,89 @@
 @import url("https://fonts.googleapis.com/css?family=Archivo+Narrow|Nanum+Gothic|Roboto&display=swap");
-body, header, nav, ul, li, section, article, h1, h2, h3, h4, h5, h6, p, div, a, span {
-  margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
+body, header, nav, ul, li, section, article, h1, h2, h3, h4, h5, h6, p, div, a, span { margin: 0; padding: 0; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
-body {
-  font-family: 'Nanum Gothic', 'Roboto', sans-serif;
-  font-size: 13px;
-  color: #555555;
-  background: #FFFFFF;
-  overflow-y: scroll;
-}
+body { font-family: 'Nanum Gothic', 'Roboto', sans-serif; font-size: 13px; color: #555555; background: #FFFFFF; overflow-y: scroll; }
 
-h1, h2, h3, h4, h5, h6 {
-  font-size: inherit;
-  font-weight: normal;
-}
+h1, h2, h3, h4, h5, h6 { font-size: inherit; font-weight: normal; }
 
-li {
-  list-style: none;
-}
+li { list-style: none; }
 
-a {
-  text-decoration: none;
-  color: inherit;
-}
+a { text-decoration: none; color: inherit; }
 
-input, button, select {
-  display: inline-block;
-  margin: 0px;
-  padding: 0px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  border: 0px;
-  border-radius: 0px;
-  vertical-align: middle;
-  white-space: normal;
-  background: none;
-  line-height: 1;
-  font: inherit;
-}
+input, button, select { display: inline-block; margin: 0px; padding: 0px; -webkit-box-sizing: border-box; box-sizing: border-box; border: 0px; border-radius: 0px; vertical-align: middle; white-space: normal; background: none; line-height: 1; font: inherit; }
 
-select {
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
-}
+select { -webkit-appearance: none; -moz-appearance: none; appearance: none; }
 
-select::-ms-expand {
-  display: none;
-}
+select::-ms-expand { display: none; }
 
-button {
-  cursor: pointer;
-}
+button { cursor: pointer; }
 
-.eland-wrap {
-  height: 40px;
-  border-bottom: 1px solid #E5E5E5;
-}
+.eland-wrap { height: 40px; border-bottom: 1px solid #E5E5E5; }
 
-.eland {
-  position: relative;
-  width: 1100px;
-  height: 40px;
-  margin: 0 auto;
-}
+.eland { position: relative; width: 1100px; height: 40px; margin: 0 auto; }
 
-.eland > ul {
-  position: absolute;
-  display: block;
-}
+.eland > ul { position: absolute; display: block; }
 
-.eland .eland-site {
-  top: 0px;
-  left: 0px;
-  height: 40px;
-  background-image: url(../img/icons/header_lloyd.png);
-  background-repeat: no-repeat;
-}
+.eland .eland-site { top: 0px; left: 0px; height: 40px; background-image: url(../img/icons/header_lloyd.png); background-repeat: no-repeat; }
 
-.eland .eland-site .li-brand:hover > ul {
-  display: block;
-}
+.eland .eland-site .li-brand:hover > ul { display: block; }
 
-.eland .eland-site > li {
-  display: inline-block;
-  vertical-align: middle;
-}
+.eland .eland-site > li { display: inline-block; vertical-align: middle; }
 
-.eland .eland-site > li:nth-child(2) a {
-  width: 133px;
-}
+.eland .eland-site > li:nth-child(2) a { width: 133px; }
 
-.eland .eland-site > li > a {
-  display: inline-block;
-  width: 110px;
-  height: 40px;
-}
+.eland .eland-site > li > a { display: inline-block; width: 110px; height: 40px; }
 
-.eland .eland-site > li .brand {
-  position: absolute;
-  top: 50%;
-  left: 410px;
-  -webkit-transform: translate(0%, -50%);
-          transform: translate(0%, -50%);
-  width: 125px;
-  height: 26px;
-  line-height: 26px;
-  padding-left: 14px;
-  color: #5F5F5F;
-  font-family: 'Archivo Narrow', sans-serif;
-  font-weight: bolder;
-  font-size: 12px;
-  letter-spacing: 1px;
-  border: 1px solid #ECECEC;
-  background-image: url(../img/icons/bu_brand_arrow.png);
-  background-repeat: no-repeat;
-  background-position: 97px -22px;
-}
+.eland .eland-site > li .brand { position: absolute; top: 50%; left: 410px; -webkit-transform: translate(0%, -50%); transform: translate(0%, -50%); width: 125px; height: 26px; line-height: 26px; padding-left: 14px; color: #5F5F5F; font-family: 'Archivo Narrow', sans-serif; font-weight: bolder; font-size: 12px; letter-spacing: 1px; border: 1px solid #ECECEC; background-image: url(../img/icons/bu_brand_arrow.png); background-repeat: no-repeat; background-position: 97px -22px; }
 
-.eland .eland-site > li .brand:hover, .eland .eland-site > li .brand:focus {
-  background-position: 97px -2px;
-}
+.eland .eland-site > li .brand:hover, .eland .eland-site > li .brand:focus { background-position: 97px -2px; }
 
-.eland .eland-site > li .brand img {
-  padding-left: 9px;
-}
+.eland .eland-site > li .brand img { padding-left: 9px; }
 
-.eland .eland-site > li .brand-site {
-  display: none;
-}
+.eland .eland-site > li .brand-site { display: none; }
 
-.eland .eland-site > li .brand-site li {
-  padding: 20px 0px;
-}
+.eland .eland-site > li .brand-site li { padding: 20px 0px; }
 
-.eland .eland-site > li .brand-site li a img {
-  width: 100px;
-}
+.eland .eland-site > li .brand-site li a img { width: 100px; }
 
-.eland .eland-site > li .brand-site li:nth-of-type(1) span, .eland .eland-site > li .brand-site li:nth-of-type(2) span {
-  height: 80px;
-}
+.eland .eland-site > li .brand-site li:nth-of-type(1) span, .eland .eland-site > li .brand-site li:nth-of-type(2) span { height: 80px; }
 
-.eland .eland-site > li .brand-site li + li {
-  border-top: 1px solid #ededed;
-}
+.eland .eland-site > li .brand-site li + li { border-top: 1px solid #ededed; }
 
-.eland .eland-site > li .brand-site .brand-type {
-  display: block;
-  float: left;
-  width: 180px;
-  height: 40px;
-  padding: 0px 40px;
-}
+.eland .eland-site > li .brand-site .brand-type { display: block; float: left; width: 180px; height: 40px; padding: 0px 40px; }
 
-.eland .eland-member {
-  top: 50%;
-  right: 0px;
-  -webkit-transform: translate(0%, -50%);
-          transform: translate(0%, -50%);
-}
+.eland .eland-member { top: 50%; right: 0px; -webkit-transform: translate(0%, -50%); transform: translate(0%, -50%); }
 
-.eland .eland-member li {
-  display: inline-block;
-  font-size: 11px;
-}
+.eland .eland-member li { display: inline-block; font-size: 11px; }
 
-.eland .eland-member li img {
-  padding: 0px 10px;
-}
+.eland .eland-member li img { padding: 0px 10px; }
 
-.eland .eland-member .login {
-  position: fixed;
-  background: #999;
-}
+.eland .eland-member .login { position: fixed; background: #999; }
 
-.snb {
-  width: 1100px;
-  position: relative;
-  margin: 30px auto;
-}
+.snb { width: 1100px; position: relative; margin: 30px auto; }
 
-.snb .sns {
-  width: 140px;
-  height: 45px;
-  background: url(../img/icons/header_lloyd.png) 0px -159px no-repeat;
-}
+.snb .sns { width: 140px; height: 45px; background: url(../img/icons/header_lloyd.png) 0px -159px no-repeat; }
 
-.snb .sns > a {
-  display: inline-block;
-  width: 40px;
-  height: 40px;
-  border-radius: 20px;
-}
+.snb .sns > a { display: inline-block; width: 40px; height: 40px; border-radius: 20px; }
 
-.snb .sns > a + a {
-  margin-left: 6px;
-}
+.snb .sns > a + a { margin-left: 6px; }
 
-.snb h3 {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-}
+.snb h3 { position: absolute; top: 50%; left: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); }
 
-.snb .search {
-  position: absolute;
-  top: 50%;
-  -webkit-transform: translate(0%, -50%);
-          transform: translate(0%, -50%);
-  right: 0px;
-  width: 260px;
-  height: 40px;
-  background-color: #f3f3f3;
-  border-radius: 20px;
-}
+.snb .search { position: absolute; top: 50%; -webkit-transform: translate(0%, -50%); transform: translate(0%, -50%); right: 0px; width: 260px; height: 40px; background-color: #f3f3f3; border-radius: 20px; }
 
-.snb .search input {
-  width: 215px;
-  height: 100%;
-  border-radius: 20px;
-  padding-left: 5px;
-}
+.snb .search input { width: 215px; height: 100%; border-radius: 20px; padding-left: 5px; }
 
-.snb .search button {
-  position: absolute;
-  top: 0%;
-  right: 0px;
-  width: 40px;
-  height: 40px;
-  border-radius: 20px;
-  background: url(../img/icons/header_lloyd.png) -175px -158px no-repeat;
-}
+.snb .search button { position: absolute; top: 0%; right: 0px; width: 40px; height: 40px; border-radius: 20px; background: url(../img/icons/header_lloyd.png) -175px -158px no-repeat; }
 
-.gnb {
-  position: relative;
-  background: #16391D;
-  color: #f2f2f2;
-}
+.gnb { position: relative; background: #16391D; color: #f2f2f2; }
 
-.gnb > ul {
-  width: 1100px;
-  margin: 0 auto;
-  overflow: hidden;
-}
+.gnb > ul { width: 1100px; margin: 0 auto; overflow: hidden; }
 
-.gnb > ul > li {
-  float: left;
-  padding: 0px 27px;
-  line-height: 40px;
-}
+.gnb > ul > li { float: left; padding: 0px 27px; line-height: 40px; }
 
-.gnb > ul > li > ul:first-child {
-  width: 180px;
-  background: pink;
-}
+.gnb > ul > li > ul:first-child { width: 180px; background: pink; }
 
-.gnb > ul > li > ul > li {
-  float: left;
-  position: absolute;
-  background: red;
-}
+.gnb > ul > li > ul > li { float: left; position: absolute; background: red; }
 
-.text-ir {
-  position: absolute;
-  text-indent: -9999px;
-}
+.text-ir { position: absolute; text-indent: -9999px; }
 /*# sourceMappingURL=index.css.map */
