--- a/study/css수업/20190502/css/0502-04.css
+++ b/study/css수업/20190502/css/0502-04.css
@@ -1,50 +1,15 @@
 @import url(http://fonts.googleapis.com/scc?familly=Roboto);
-.container {
-  overflow: hidden;
-  width: 760px;
-  margin: 0 auto;
-  padding: 10px 0px;
-}
+.container { overflow: hidden; width: 760px; margin: 0 auto; padding: 10px 0px; }
 
-.container div.block {
-  width: 160px;
-  margin: 0px 5px;
-  padding: 13px 10px;
-  float: left;
-  background: url(../../img/20190502/wood.png) no-repeat;
-  -webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
-          box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
-  border-radius: 6px;
-}
+.container div.block { width: 160px; margin: 0px 5px; padding: 13px 10px; float: left; background: url(../../img/20190502/wood.png) no-repeat; -webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2); box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2); border-radius: 6px; }
 
-.container div.block h2 {
-  background: url(../../img/20190502/directory.png) no-repeat 0px 0px;
-  font-size: 14px;
-  padding: 0px 0px 8px 28px;
-}
+.container div.block h2 { background: url(../../img/20190502/directory.png) no-repeat 0px 0px; font-size: 14px; padding: 0px 0px 8px 28px; }
 
-.container div.block .slide-show {
-  width: 160px;
-  height: 107px;
-  position: relative;
-  background: #fff;
-  margin: 0px 0px 10px;
-}
+.container div.block .slide-show { width: 160px; height: 107px; position: relative; background: #fff; margin: 0px 0px 10px; }
 
-.container div.block .slide-show img {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
+.container div.block .slide-show img { position: absolute; top: 0; left: 0; }
 
-.container div.block .slide-show img.pic {
-  display: none;
-}
+.container div.block .slide-show img.pic { display: none; }
 
-.container div.block p {
-  font-size: 12px;
-  line-height: 1.5;
-  padding: 0;
-  margin: 0;
-}
+.container div.block p { font-size: 12px; line-height: 1.5; padding: 0; margin: 0; }
 /*# sourceMappingURL=0502-04.css.map */
