--- a/study/css수업/20190508/css/0508-02.css
+++ b/study/css수업/20190508/css/0508-02.css
@@ -1,48 +1,18 @@
-* {
-  margin: 0;
-  padding: 0;
-}
+* { margin: 0; padding: 0; }
 
-li {
-  list-style: none;
-}
+li { list-style: none; }
 
-a {
-  font-family: 'Arial','sans-serif';
-  text-decoration: none;
-  color: #999;
-}
+a { font-family: 'Arial','sans-serif'; text-decoration: none; color: #999; }
 
-.menu {
-  position: absolute;
-  width: 50%;
-  height: 100%;
-  background: #262626;
-}
+.menu { position: absolute; width: 50%; height: 100%; background: #262626; }
 
-.menu a.m {
-  background: #111;
-  font-weight: bold;
-  display: block;
-  padding: 20px;
-  border-top: 1px solid #2e2e2e;
-  border-bottom: 1px solid #2e2e2e;
-}
+.menu a.m { background: #111; font-weight: bold; display: block; padding: 20px; border-top: 1px solid #2e2e2e; border-bottom: 1px solid #2e2e2e; }
 
-.menu a.m.on {
-  color: #fc73b2;
-}
+.menu a.m.on { color: #fc73b2; }
 
-.menu ul a {
-  background: #3a3a3a;
-  text-indent: 20px;
-}
+.menu ul a { background: #3a3a3a; text-indent: 20px; }
 
-.menu li ul {
-  display: none;
-}
+.menu li ul { display: none; }
 
-.menu li ul.on {
-  display: block;
-}
+.menu li ul.on { display: block; }
 /*# sourceMappingURL=0508-02.css.map */
