--- a/study/css수업/20190514실습/css/mobile-join.css
+++ b/study/css수업/20190514실습/css/mobile-join.css
@@ -1,141 +1,44 @@
-* {
-  margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
+* { margin: 0; padding: 0; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
-a {
-  text-decoration: none;
-  color: inherit;
-}
+a { text-decoration: none; color: inherit; }
 
-section, footer {
-  margin: 0px 16px;
-}
+section, footer { margin: 0px 16px; }
 
-header {
-  position: absolute;
-  top: 0px;
-  width: 100%;
-  height: 90px;
-  border-bottom: 1px dotted #f0ede9;
-}
+header { position: absolute; top: 0px; width: 100%; height: 90px; border-bottom: 1px dotted #f0ede9; }
 
-header .menu-bar {
-  position: absolute;
-  top: 35px;
-  left: 30px;
-  width: 40px;
-  height: 26px;
-  cursor: pointer;
-}
+header .menu-bar { position: absolute; top: 35px; left: 30px; width: 40px; height: 26px; cursor: pointer; }
 
-header .menu-bar span {
-  position: absolute;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  display: block;
-  width: 40px;
-  height: 3px;
-  background: #000000;
-}
+header .menu-bar span { position: absolute; -webkit-transform: translateY(-50%); transform: translateY(-50%); display: block; width: 40px; height: 3px; background: #000000; }
 
-header .menu-bar span:nth-child(2) {
-  top: 10px;
-}
+header .menu-bar span:nth-child(2) { top: 10px; }
 
-header .menu-bar span:last-child {
-  top: 20px;
-}
+header .menu-bar span:last-child { top: 20px; }
 
-header h1 {
-  line-height: 90px;
-  font-size: 26px;
-  font-weight: normal;
-  letter-spacing: 2px;
-  color: #2b2b2b;
-  text-align: center;
-}
+header h1 { line-height: 90px; font-size: 26px; font-weight: normal; letter-spacing: 2px; color: #2b2b2b; text-align: center; }
 
-header div {
-  position: absolute;
-  top: 50%;
-  right: 30px;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  width: 30px;
-  height: 30px;
-}
+header div { position: absolute; top: 50%; right: 30px; -webkit-transform: translateY(-50%); transform: translateY(-50%); width: 30px; height: 30px; }
 
-header div i {
-  font-size: 30px;
-  color: #929292;
-}
+header div i { font-size: 30px; color: #929292; }
 
-section {
-  margin-top: 110px;
-  text-transform: uppercase;
-}
+section { margin-top: 110px; text-transform: uppercase; }
 
-section h2 {
-  text-align: center;
-  font-size: 25px;
-}
+section h2 { text-align: center; font-size: 25px; }
 
-section .join-title {
-  overflow: hidden;
-}
+section .join-title { overflow: hidden; }
 
-section .join-title a {
-  margin-top: 20px;
-  display: block;
-  float: left;
-  width: 32%;
-  padding: 5px 0px;
-  margin-right: 5px;
-  font-size: 11px;
-  text-align: center;
-  border: 1px solid #e9e9eb;
-  border-radius: 40px;
-  color: #888888;
-}
+section .join-title a { margin-top: 20px; display: block; float: left; width: 32%; padding: 5px 0px; margin-right: 5px; font-size: 11px; text-align: center; border: 1px solid #e9e9eb; border-radius: 40px; color: #888888; }
 
-section .join-title a:last-child {
-  margin-right: 0px;
-}
+section .join-title a:last-child { margin-right: 0px; }
 
-section .join-title a:hover {
-  background: #41a5de;
-  color: #ffffff;
-}
+section .join-title a:hover { background: #41a5de; color: #ffffff; }
 
-section .join-title a span {
-  font-size: 14px;
-  padding-right: 5px;
-}
+section .join-title a span { font-size: 14px; padding-right: 5px; }
 
-article {
-  margin-top: 20px;
-  color: #474747;
-  overflow: hidden;
-}
+article { margin-top: 20px; color: #474747; overflow: hidden; }
 
-article label, article input {
-  margin: 5px 0px;
-  display: block;
-}
+article label, article input { margin: 5px 0px; display: block; }
 
-article label {
-  float: left;
-  width: 30%;
-  font-size: 14px;
-}
+article label { float: left; width: 30%; font-size: 14px; }
 
-article input {
-  width: 70%;
-  height: 35px;
-  border: 1px solid #e5e5e5;
-  outline: none;
-}
+article input { width: 70%; height: 35px; border: 1px solid #e5e5e5; outline: none; }
 /*# sourceMappingURL=mobile-join.css.map */
