--- a/study/실습/20190524/css/table.css
+++ b/study/실습/20190524/css/table.css
@@ -1,205 +1,64 @@
-* {
-  margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
+* { margin: 0; padding: 0; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-  border: 0 none;
-  margin-top: 100px;
-  margin-left: 50px;
-  min-width: 850px;
-}
+table { border-collapse: collapse; border-spacing: 0; border: 0 none; margin-top: 100px; margin-left: 50px; min-width: 850px; }
 
-a {
-  text-decoration: none;
-  color: inherit;
-}
+a { text-decoration: none; color: inherit; }
 
-li {
-  list-style: none;
-}
+li { list-style: none; }
 
-body {
-  font-size: 14px;
-}
+body { font-size: 14px; }
 
-#wrap-admin {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  right: 0px;
-  bottom: 0px;
-  width: auto;
-  height: auto;
-  overflow: hidden;
-}
+#wrap-admin { position: absolute; top: 0px; left: 0px; right: 0px; bottom: 0px; width: auto; height: auto; overflow: hidden; }
 
-#wrap-admin header {
-  z-index: 10;
-  position: fixed;
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  height: 50px;
-  background: #454fb4;
-}
+#wrap-admin header { z-index: 10; position: fixed; top: 0px; left: 0px; width: 100%; height: 50px; background: #454fb4; }
 
-#wrap-admin header div {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  width: 300px;
-  height: 100%;
-  background: #353e9e;
-}
+#wrap-admin header div { position: absolute; top: 0px; left: 0px; width: 300px; height: 100%; background: #353e9e; }
 
-#wrap-admin header div h1 {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  text-align: center;
-  color: #fff;
-}
+#wrap-admin header div h1 { position: absolute; top: 50%; left: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); text-align: center; color: #fff; }
 
-#container {
-  position: absolute;
-  top: 0px;
-  bottom: 0px;
-  left: 0px;
-  right: 0px;
-  padding-bottom: 50px;
-}
+#container { position: absolute; top: 0px; bottom: 0px; left: 0px; right: 0px; padding-bottom: 50px; }
 
-#left-menu {
-  position: absolute;
-  top: 50px;
-  bottom: 0px;
-  left: 0;
-  right: 0px;
-  width: 300px;
-  background: #fff;
-  -webkit-box-shadow: 1px 0px 5px rgba(0, 0, 0, 0.1);
-          box-shadow: 1px 0px 5px rgba(0, 0, 0, 0.1);
-}
+#left-menu { position: absolute; top: 50px; bottom: 0px; left: 0; right: 0px; width: 300px; background: #fff; -webkit-box-shadow: 1px 0px 5px rgba(0, 0, 0, 0.1); box-shadow: 1px 0px 5px rgba(0, 0, 0, 0.1); }
 
-#left-menu .menu-item {
-  padding: 15px 15px;
-}
+#left-menu .menu-item { padding: 15px 15px; }
 
-#left-menu .menu-item > li > button {
-  border: none;
-  background: #fff;
-  font-weight: bold;
-  font-size: 16px;
-  cursor: pointer;
-  padding: 10px 10px;
-}
+#left-menu .menu-item > li > button { border: none; background: #fff; font-weight: bold; font-size: 16px; cursor: pointer; padding: 10px 10px; }
 
-#left-menu .menu-item > li > button > ul > li {
-  padding: 10px 10px;
-}
+#left-menu .menu-item > li > button > ul > li { padding: 10px 10px; }
 
-.contents {
-  position: absolute;
-  top: 50px;
-  bottom: 0px;
-  left: 300px;
-  right: 0px;
-}
+.contents { position: absolute; top: 50px; bottom: 0px; left: 300px; right: 0px; }
 
-.contents .basic-table {
-  width: 90%;
-  -webkit-box-sizing: initial;
-          box-sizing: initial;
-}
+.contents .basic-table { width: 90%; -webkit-box-sizing: initial; box-sizing: initial; }
 
-.contents .basic-table th, .contents .basic-table td {
-  padding: 10px 0px;
-}
+.contents .basic-table th, .contents .basic-table td { padding: 10px 0px; }
 
-.contents .basic-table th {
-  background: #f3f3f3;
-  border: 1px solid #d3d3d3;
-  border-top: 2px solid #323232;
-}
+.contents .basic-table th { background: #f3f3f3; border: 1px solid #d3d3d3; border-top: 2px solid #323232; }
 
-.contents .basic-table td {
-  text-align: center;
-  border: 1px solid #d3d3d3;
-}
+.contents .basic-table td { text-align: center; border: 1px solid #d3d3d3; }
 
-.contents .basic-table td button {
-  width: 70%;
-  padding: 7px 0px;
-  background: #383838;
-  color: #fff;
-  font-size: 12px;
-  border: none;
-  cursor: pointer;
-}
+.contents .basic-table td button { width: 70%; padding: 7px 0px; background: #383838; color: #fff; font-size: 12px; border: none; cursor: pointer; }
 
-.table-step2 {
-  border: 1px solid #d3d3d3;
-}
+.table-step2 { border: 1px solid #d3d3d3; }
 
-.table-step2 .th-bg {
-  background: #658ee6;
-}
+.table-step2 .th-bg { background: #658ee6; }
 
-.table-step2 .th-bg th {
-  background: #658ee6;
-}
+.table-step2 .th-bg th { background: #658ee6; }
 
-.table-step2 thead th {
-  background: #457bf0;
-  border: 1px solid #d3d3d3;
-  padding: 10px 0px;
-  color: #fff;
-}
+.table-step2 thead th { background: #457bf0; border: 1px solid #d3d3d3; padding: 10px 0px; color: #fff; }
 
-.table-step2 tbody td {
-  text-align: center;
-  border: 1px solid #d3d3d3;
-  padding: 10px 0px;
-}
+.table-step2 tbody td { text-align: center; border: 1px solid #d3d3d3; padding: 10px 0px; }
 
-.table-step3 {
-  border: 1px solid #d3d3d3;
-}
+.table-step3 { border: 1px solid #d3d3d3; }
 
-.table-step3 .th-bg {
-  background: #658ee6;
-}
+.table-step3 .th-bg { background: #658ee6; }
 
-.table-step3 .th-bg th {
-  background: #658ee6;
-}
+.table-step3 .th-bg th { background: #658ee6; }
 
-.table-step3 thead th {
-  border: 1px solid #d3d3d3;
-  background: #457bf0;
-  padding: 10px 0px;
-  color: #fff;
-}
+.table-step3 thead th { border: 1px solid #d3d3d3; background: #457bf0; padding: 10px 0px; color: #fff; }
 
-.table-step3 tbody td {
-  text-align: center;
-  border: 1px solid #d3d3d3;
-  padding: 10px 0px;
-  color: red;
-}
+.table-step3 tbody td { text-align: center; border: 1px solid #d3d3d3; padding: 10px 0px; color: red; }
 
-.table-step3 tbody td:first-child {
-  color: inherit;
-}
+.table-step3 tbody td:first-child { color: inherit; }
 
-.table-step3 tbody .td-red {
-  color: inherit;
-}
+.table-step3 tbody .td-red { color: inherit; }
 /*# sourceMappingURL=table.css.map */
