--- a/home/3_test/css/index.scss
+++ b/home/3_test/css/index.scss
@@ -11,7 +11,7 @@ p {
   font-family: 'Noto Sans KR', sans-serif;
 }
 
-.main {
+main {
   display: block;
 }
 
@@ -62,8 +62,6 @@ main {
     min-width: 1024px;
   }
 }
-
-
 
 .visual {
   overflow: hidden;
@@ -229,11 +227,11 @@ main {
       font-size: 60px;
       word-break: keep-all;
 
-      .em-style-1 {
+      .em-common-1 {
         color: #71abb9;
       }
 
-      .em-style-2 {
+      .em-common-2 {
         color: #f6ac9f;
       }
     }
@@ -249,13 +247,13 @@ main {
     }
   }
 
-  > article {
+  > section {
     display: flex;
     flex-direction: row;
 
     .sns-post {
       position: relative;
-      width: 25vw;
+      width: 25%;
       height: calc(25vw - 4px);
       min-width: 252px;
       min-height: 252px;
@@ -411,12 +409,6 @@ main {
     }
 
     p {
-      //ie에서 안됌
-      display: -webkit-box;
-      -webkit-line-clamp: 3;
-      -webkit-box-orient: vertical;
-      text-overflow: ellipsis;
-      overflow: hidden;
       width: 100%;
       height: 4.5em;
       margin-top: 20px;
@@ -424,8 +416,8 @@ main {
       color: #111;
       font-size: 13px;
       word-break: break-all;
+      overflow: hidden;
     }
-    
 
     .date {
       color: #cbb6b1;
@@ -465,6 +457,7 @@ main {
 
     em {
       margin-left: 5px;
+      color: #67706f;
     }
   }
 
@@ -593,7 +586,10 @@ main {
       padding: 190px 0px 170px;
 
       h2, p {
-        width: 1150px;
+        max-width: 1350px;
+        width: 80vw;
+        min-width: 1024px;
+        padding: 0px 100px;
         text-align: center;
       }
 
@@ -613,8 +609,9 @@ main {
   }
   
   .panel-post {
-    width: 25vw;
+    width: 25%;
     min-width: 256px;
+    overflow: hidden;
 
     img {
       width: 100%;
@@ -637,6 +634,23 @@ main {
 
     .post {
       width: 90%;
+    }
+  }
+}
+
+@media all and (max-width: 1300px) {
+  nav {
+    top: 5px;
+    background-color: rgba(0,0,0,0.75);
+  }
+
+  .useful-things {
+    .post-box {
+      .post {
+        > em {
+          font-size: 18px;
+        }
+      }
     }
   }
 }
@@ -672,22 +686,4 @@ main {
   .travel-journals > section .first-list > li .second-list > li {
     margin: 13px;
   }
-}
-
-@media all and (max-width: 1300px) {
-  nav {
-    top: 5px;
-    background-color: rgba(0,0,0,0.75);
-  }
-
-  .useful-things {
-    .post-box {
-      .post {
-        > em {
-          font-size: 18px;
-        }
-      }
-    }
-  }
-
 }
